; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/riched20/extr_writer.c_stream_out_para_num.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/riched20/extr_writer.c_stream_out_para_num.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { %struct.TYPE_10__, %struct.TYPE_9__ }
%struct.TYPE_10__ = type { i32, i32, i32, i32 }
%struct.TYPE_9__ = type { %struct.TYPE_8__*, %struct.TYPE_7__* }
%struct.TYPE_8__ = type { i32, i32 }
%struct.TYPE_7__ = type { i32 }

@stream_out_para_num.fmt_label = internal constant [49 x i8] c"{\\*\\pn\\pnlvlbody\\pnf%u\\pnindent%d\\pnstart%d%s%s}\00", align 16
@stream_out_para_num.fmt_bullet = internal constant [47 x i8] c"{\\*\\pn\\pnlvlblt\\pnf%u\\pnindent%d{\\pntxtb\\'b7}}\00", align 16
@stream_out_para_num.dec = internal constant [7 x i8] c"\\pndec\00", align 1
@stream_out_para_num.lcltr = internal constant [9 x i8] c"\\pnlcltr\00", align 1
@stream_out_para_num.ucltr = internal constant [9 x i8] c"\\pnucltr\00", align 1
@stream_out_para_num.lcrm = internal constant [8 x i8] c"\\pnlcrm\00", align 1
@stream_out_para_num.ucrm = internal constant [8 x i8] c"\\pnucrm\00", align 1
@stream_out_para_num.period = internal constant [11 x i8] c"{\\pntxta.}\00", align 1
@stream_out_para_num.paren = internal constant [11 x i8] c"{\\pntxta)}\00", align 1
@stream_out_para_num.parens = internal constant [21 x i8] c"{\\pntxtb(}{\\pntxta)}\00", align 16
@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.1 = private unnamed_addr constant [14 x i8] c"{\\pntext\\f%u \00", align 1
@FALSE = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [6 x i8] c"\\tab}\00", align 1
@TRUE = common dso_local global i32 0, align 4
@PFN_BULLET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_11__*, i32)* @stream_out_para_num to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stream_out_para_num(i32* %0, %struct.TYPE_11__* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_11__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store %struct.TYPE_11__* %1, %struct.TYPE_11__** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i8** %9, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %13 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %12, i32 0, i32 1
  %14 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %13, i32 0, i32 1
  %15 = load %struct.TYPE_7__*, %struct.TYPE_7__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %15, i32 0, i32 0
  %17 = call i32 @find_font_in_fonttbl(i32* %11, i32* %16, i32* %10)
  %18 = load i32*, i32** %5, align 8
  %19 = load i32, i32* %10, align 4
  %20 = call i32 (i32*, i8*, ...) @ME_StreamOutPrint(i32* %18, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0), i32 %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %24, label %22

22:                                               ; preds = %3
  %23 = load i32, i32* @FALSE, align 4
  store i32 %23, i32* %4, align 4
  br label %112

24:                                               ; preds = %3
  %25 = load i32*, i32** %5, align 8
  %26 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %27 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %26, i32 0, i32 1
  %28 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %27, i32 0, i32 0
  %29 = load %struct.TYPE_8__*, %struct.TYPE_8__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 4
  %32 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %33 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %32, i32 0, i32 1
  %34 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %33, i32 0, i32 0
  %35 = load %struct.TYPE_8__*, %struct.TYPE_8__** %34, align 8
  %36 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = call i32 @ME_StreamOutRTFText(i32* %25, i32 %31, i32 %37)
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %42, label %40

40:                                               ; preds = %24
  %41 = load i32, i32* @FALSE, align 4
  store i32 %41, i32* %4, align 4
  br label %112

42:                                               ; preds = %24
  %43 = load i32*, i32** %5, align 8
  %44 = call i32 (i32*, i8*, ...) @ME_StreamOutPrint(i32* %43, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0))
  %45 = icmp ne i32 %44, 0
  br i1 %45, label %48, label %46

46:                                               ; preds = %42
  %47 = load i32, i32* @FALSE, align 4
  store i32 %47, i32* %4, align 4
  br label %112

48:                                               ; preds = %42
  %49 = load i32, i32* %7, align 4
  %50 = icmp ne i32 %49, 0
  br i1 %50, label %53, label %51

51:                                               ; preds = %48
  %52 = load i32, i32* @TRUE, align 4
  store i32 %52, i32* %4, align 4
  br label %112

53:                                               ; preds = %48
  %54 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %55 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %54, i32 0, i32 0
  %56 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %55, i32 0, i32 0
  %57 = load i32, i32* %56, align 8
  %58 = load i32, i32* @PFN_BULLET, align 4
  %59 = icmp eq i32 %57, %58
  br i1 %59, label %60, label %72

60:                                               ; preds = %53
  %61 = load i32*, i32** %5, align 8
  %62 = load i32, i32* %10, align 4
  %63 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %64 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %63, i32 0, i32 0
  %65 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %64, i32 0, i32 3
  %66 = load i32, i32* %65, align 4
  %67 = call i32 (i32*, i8*, ...) @ME_StreamOutPrint(i32* %61, i8* getelementptr inbounds ([47 x i8], [47 x i8]* @stream_out_para_num.fmt_bullet, i64 0, i64 0), i32 %62, i32 %66)
  %68 = icmp ne i32 %67, 0
  br i1 %68, label %71, label %69

69:                                               ; preds = %60
  %70 = load i32, i32* @FALSE, align 4
  store i32 %70, i32* %4, align 4
  br label %112

71:                                               ; preds = %60
  br label %110

72:                                               ; preds = %53
  %73 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %74 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %73, i32 0, i32 0
  %75 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %74, i32 0, i32 0
  %76 = load i32, i32* %75, align 8
  switch i32 %76, label %78 [
    i32 132, label %77
    i32 131, label %79
    i32 129, label %80
    i32 130, label %81
    i32 128, label %82
  ]

77:                                               ; preds = %72
  br label %78

78:                                               ; preds = %72, %77
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @stream_out_para_num.dec, i64 0, i64 0), i8** %8, align 8
  br label %83

79:                                               ; preds = %72
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @stream_out_para_num.lcltr, i64 0, i64 0), i8** %8, align 8
  br label %83

80:                                               ; preds = %72
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @stream_out_para_num.ucltr, i64 0, i64 0), i8** %8, align 8
  br label %83

81:                                               ; preds = %72
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @stream_out_para_num.lcrm, i64 0, i64 0), i8** %8, align 8
  br label %83

82:                                               ; preds = %72
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @stream_out_para_num.ucrm, i64 0, i64 0), i8** %8, align 8
  br label %83

83:                                               ; preds = %82, %81, %80, %79, %78
  %84 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %85 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %84, i32 0, i32 0
  %86 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %85, i32 0, i32 1
  %87 = load i32, i32* %86, align 4
  %88 = and i32 %87, 3840
  switch i32 %88, label %92 [
    i32 133, label %89
    i32 135, label %90
    i32 134, label %91
  ]

89:                                               ; preds = %83
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @stream_out_para_num.period, i64 0, i64 0), i8** %9, align 8
  br label %92

90:                                               ; preds = %83
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @stream_out_para_num.paren, i64 0, i64 0), i8** %9, align 8
  br label %92

91:                                               ; preds = %83
  store i8* getelementptr inbounds ([21 x i8], [21 x i8]* @stream_out_para_num.parens, i64 0, i64 0), i8** %9, align 8
  br label %92

92:                                               ; preds = %83, %91, %90, %89
  %93 = load i32*, i32** %5, align 8
  %94 = load i32, i32* %10, align 4
  %95 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %96 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %95, i32 0, i32 0
  %97 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %96, i32 0, i32 3
  %98 = load i32, i32* %97, align 4
  %99 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %100 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %99, i32 0, i32 0
  %101 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %100, i32 0, i32 2
  %102 = load i32, i32* %101, align 8
  %103 = load i8*, i8** %8, align 8
  %104 = load i8*, i8** %9, align 8
  %105 = call i32 (i32*, i8*, ...) @ME_StreamOutPrint(i32* %93, i8* getelementptr inbounds ([49 x i8], [49 x i8]* @stream_out_para_num.fmt_label, i64 0, i64 0), i32 %94, i32 %98, i32 %102, i8* %103, i8* %104)
  %106 = icmp ne i32 %105, 0
  br i1 %106, label %109, label %107

107:                                              ; preds = %92
  %108 = load i32, i32* @FALSE, align 4
  store i32 %108, i32* %4, align 4
  br label %112

109:                                              ; preds = %92
  br label %110

110:                                              ; preds = %109, %71
  %111 = load i32, i32* @TRUE, align 4
  store i32 %111, i32* %4, align 4
  br label %112

112:                                              ; preds = %110, %107, %69, %51, %46, %40, %22
  %113 = load i32, i32* %4, align 4
  ret i32 %113
}

declare dso_local i32 @find_font_in_fonttbl(i32*, i32*, i32*) #1

declare dso_local i32 @ME_StreamOutPrint(i32*, i8*, ...) #1

declare dso_local i32 @ME_StreamOutRTFText(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
